# ArchersUnlimitedReload

./: CMakeLists.txt
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/GameEngine/: Player.cpp  Player.h  Statistics.cpp  Statistics.h
Classes/GameEngine/Brains/: Brain.cpp  Brain.h
Classes/GameEngine/Global/: BattleHistory.cpp  BattleHistory.h  InfoPanel.cpp  InfoPanel.h  Producer.cpp  Producer.h  SocketClient.cpp  SocketClient.h  Variables.cpp  Variables.h  WeaponSelector.cpp  WeaponSelector.h
Classes/GameEngine/Global/Misc/: Asset.cpp  Asset.h  DBPlayer.cpp  DBPlayer.h  EventInfo.cpp  EventInfo.h  EventScore.cpp  EventScore.h  JSONParser.cpp  JSONParser.h  PopUp.cpp  PopUp.h  RichSearchButton.cpp  RichSearchButton.h  SocketClient.cpp  SocketClient.h  Views.cpp  Views.h
Classes/GameEngine/Global/Misc/UI/: Asset.cpp  Asset.h  ButtonWithPrice.cpp  ButtonWithPrice.h  Clocks.cpp  Clocks.h  ContinueButton.cpp  ContinueButton.h  GiftAlert.cpp  GiftAlert.h  InfoButton.cpp  InfoButton.h  PopUp.cpp  PopUp.h  Reward.cpp  Reward.h  RewardButton.cpp  RewardButton.h  RichEventButton.cpp  RichEventButton.h  RichSearchButton.cpp  RichWheelButton.cpp  RichWheelButton.h  UIControls.cpp  UIControls.h  Views.cpp  Views.h
Classes/GameEngine/Objects/: DragonObject.cpp  DragonObject.h  Hero.cpp  Hero.h  Stickman.cpp  Stickman.h  Target.cpp  Target.h  WeaponSelector.cpp  WeaponSelector.h
Classes/GameEngine/Objects/Aim/: Aim.cpp  Aim.h  AimPreview.cpp  AimPreview.h
Classes/GameEngine/Objects/Arrows/: Arrow.cpp  Arrow.h  BombArrow.cpp  BombArrow.h  DuelArrow.cpp  DuelArrow.h  FireArrow.cpp  FireArrow.h  FrozenArrow.cpp  FrozenArrow.h  MineArrow.cpp  MineArrow.h  PowerArrow.cpp  PowerArrow.h
Classes/GameEngine/Objects/Brains/: Brain.cpp  Brain.h
Classes/GameEngine/Objects/Environment/: Apple.cpp  Apple.h  Box.cpp  Box.h  Butt.cpp  Butt.h  Gift.cpp  Gift.h  Ground.cpp  Ground.h  HitInfo.cpp  HitInfo.h  MainClip.cpp  MainClip.h
Classes/Localization/: LocalizedStrings.cpp  LocalizedStrings.h
Classes/Scenes/Layers/: BackgroundLayer.cpp  BackgroundLayer.h  PauseScene.cpp  PauseScene.h  UI.cpp  UI.h
Classes/Scenes/MenuLayers/: EquipmentScene.cpp  EquipmentScene.h  Loading.cpp  Loading.h  Lobby.cpp  Lobby.h  MainMenu.cpp  MainMenu.h  MultiplayerMenu.cpp  MultiplayerMenu.h  Randomizer.cpp  Randomizer.h  RegisterMenu.cpp  RegisterMenu.h  Settings.cpp  Settings.h  SplashScene.cpp  SplashScene.h
Classes/Scenes/MenuLayers/Main/: DailyGiftScene.cpp  DailyGiftScene.h  EquipmentScene.cpp  EquipmentScene.h  MainMenu.cpp  MainMenu.h  Randomizer.cpp  Randomizer.h  Settings.cpp  Settings.h
Classes/Scenes/MenuLayers/Multiplayer/: EventView.cpp  EventView.h  Lobby.cpp  Lobby.h  MultiplayerMenu.cpp  MultiplayerMenu.h  RegisterMenu.cpp
Classes/Scenes/PlayLayers/: AppleBattle.cpp  AppleBattle.h  AppleMultiplayer.h  Battle.cpp  Battle.h  BattleParent.cpp  BattleParent.h  DuelScene.cpp  DuelScene.h  DuelScene2P.cpp  DuelScene2P.h  DuelSceneMultiplayer.cpp  DuelSceneMultiplayer.h  GameOverScene.cpp  GameOverScene.h  MultiplayerBattle.cpp  MultiplayerBattle.h
Classes/Scenes/PlayLayers/Apple/: AppleBattle.cpp  AppleBattle.h  AppleMultiplayer.cpp  AppleMultiplayer.h  AppleParent.cpp  AppleParent.h
Classes/Scenes/PlayLayers/Duel/: DuelScene.cpp  DuelScene.h  DuelScene2P.cpp  DuelScene2P.h  DuelSceneMultiplayer.cpp  DuelSceneMultiplayer.h
Classes/dragonBones/cocos2dx/: CCArmatureDisplay.cpp
Resources/assets/: assets.json
Resources/hd/: ArcUnlim_2.json  background-1.plist  background-2.plist  background-3.plist  env.plist  main_background.plist  texture.json  textures.plist  ui-0.plist  ui.plist
Resources/hd/Animation/29sep/ArcUnlim/: texture.json
Resources/hd/Animation/5oct/ArcUnlim_2/: texture.json
Resources/hd/ArcUnlimArmature/: ArcUnlimArmature.json  ArcUnlimArmature_ske.json  ArcUnlimArmature_tex.json  texture.json
Resources/hd/ArcUnlim_2/: ArcUnlim_2.json  texture.json
Resources/ipad/: ArcUnlim_2.json  background-1.plist  background-2.plist  background-3.plist  env.plist  main_background.plist  texture.json  textures.plist  ui.plist
Resources/ipad/ArcUnlimArmature/: ArcUnlimArmature.json  ArcUnlimArmature_ske.json  ArcUnlimArmature_tex.json  texture.json
Resources/ipad/ArcUnlim_2/: ArcUnlim_2.json
Resources/item-assets/: assets.json  dailyGifts.json
Resources/localization/: Localized_ENGLISH  Localized_RUSSIAN
Resources/res/Animation/29sep/ArcUnlim/: ArcUnlim.json
Resources/res/Animation/3oct/ArcUnlim_2/: ArcUnlim_2.json  texture.json
Resources/res/Animation/5oct/ArcUnlim_2/: ArcUnlim_2.json
Resources/res/Animation/AN/ArcUnlim/: ArcUnlim.json
Resources/res/Animation/animation/ArcUnlim/: ArcUnlim.json  texture.json
Resources/sd/: ArcUnlim_2.json  background-1.plist  background-2.plist  background-3.plist  env.plist  main_background.plist  textures.plist  ui-0.plist  ui.plist
Resources/sd/ArcUnlimArmature/: ArcUnlimArmature.json  ArcUnlimArmature_ske.json  ArcUnlimArmature_tex.json  texture.json
Resources/sd/ArcUnlim_2/: ArcUnlim_2.json
proj.android/: AndroidManifest.xml
proj.android-studio/app/jni/: Android.mk
proj.android/jni/: Android.mk
